chore: edited env file

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
+# Using google cloud SDK for big query for the moment
 # Drizzle
 DATABASE_URL="mysql://root:password@localhost:3306/mempoolers_app"
 
@@ -18,7 +19,3 @@ DATABASE_URL="mysql://root:password@localhost:3306/mempoolers_app"
 # https://next-auth.js.org/configuration/options#secret
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
-
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
