--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "editor.formatOnPaste": false,
         "editor.formatOnSave": false,
         "editor.codeActionsOnSave": {
-            "source.fixAll.eslint": "always"
+            "source.fixAll.eslint": "explicit"
         }
     }
 }
